KAZOOUI-77: Fixed the glowing effect on FireFox

--- a/whapps/voip/callflow/css/callflow.css
+++ b/whapps/voip/callflow/css/callflow.css
@@ -155,16 +155,16 @@
 
 #callflow-view .pulse-box {
     -webkit-animation: "pulse-box" 1s ease-in-out 0 infinite alternate;
-    -moz-animation: "pulse-box" 1s ease-in-out 0 infinite alternate;
-    animation: "pulse-box" 1s ease-in-out 0 infinite alternate;
+
+    animation-name: pulse-box;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+    animation-delay: 0;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
 }
 
 @-webkit-keyframes pulse-box {
-    0% { box-shadow: 0px 0px 0px #73F03C inset, 0px 0px 0px #14FF00; }
-    100% { box-shadow: 0px 0px 30px #73F03C inset, 0px 0px 10px #14FF00; }
-}
-
-@-moz-keyframes pulse-box {
     0% { box-shadow: 0px 0px 0px #73F03C inset, 0px 0px 0px #14FF00; }
     100% { box-shadow: 0px 0px 30px #73F03C inset, 0px 0px 10px #14FF00; }
 }
